<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:padding="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/headertxt"
                android:text="@string/encrypt_heading"
                android:textSize="@dimen/sp20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <EditText
            android:hint="@string/password"
            android:layout_marginTop="@dimen/dp40"
            android:layout_marginBottom="@dimen/dp40"
            android:id="@+id/encrypt_password_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />




        <TextView
            android:layout_below="@+id/encrypt_password_box"
            android:id="@+id/View_encrypt"
            android:text="@string/encrypt"
            android:textSize="@dimen/sp16"
            android:padding="@dimen/dp10"
            android:textColor="@color/colorAccent"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_below="@+id/encrypt_password_box"
            android:id="@+id/View_cancel"
            android:text="@string/cancel"
            android:textSize="@dimen/sp16"
            android:padding="@dimen/dp10"
            android:textColor="@color/colorAccent"
            android:layout_toLeftOf="@+id/View_encrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</RelativeLayout>